--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
    <body>
    <h1>Object detection Demo</h1>
    <br><br><br><br>
-      <form action = "/" method = "POST"
+      <form action = "/predict" method = "POST"
          enctype = "multipart/form-data">
          <input type = "file" name = "file" />
          <input type = "submit"/>
