--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
           <br><br><br><br>
           All data from input to output is loaded through in memory buffer <br> so it might take time <b> O(H x W x C) </b>
           <br><br>
-          <a target="_blank" href="https://github.com/rdeepc/herokuobjectdetection">Github</a>
+          <a target="_blank" href="https://github.com/prajwal714">Go to Github</a>
       </form>
    </body>
 </html>
